--- a/templates/checkout/delivery_choices.html
+++ b/templates/checkout/delivery_choices.html
@@ -30,7 +30,9 @@
           <h1 class="h2">Delivery Options</h1>
         </div>
         <div class="col-12">
-          <p>Kindly Select your delivery options</p>
+          <p>Kindly Select your delivery options, but before this ensure you've added your address in your dashboard
+            have a nice shopping <i class="fa fa-smile" style="font-size: 30px; color: blue;"></i> ahead smiles!!!.
+          </p>
         </div>
         <hr />
       </div>
