--- a/templates/account/registration/register.html
+++ b/templates/account/registration/register.html
@@ -45,7 +45,11 @@
                              <form style="color: orangered;" class="account-form p-4 rounded col-lg-10 mx-auto" action="." method="post">
                                 {% csrf_token %}
                                 <h3 class="mb-2">Create an account</h3>
-                                <p class="mb-4">It's free and only takes a minute.</p>
+                                <p class="mb-4">It's free and only takes a minute. Kindly note after registering, kindly check ur fa-inbox
+                                    already an email has been sent to you, thanks and happy shopping 
+                                    <i style="font-size: 50px; color: blue;" class="fa fa-smile"></i>
+                                </p>
+                                
 
                                 {% if form.errors %}
                                 <p>Please correct the following errors:</p>
