--- a/templates/payment/home.html
+++ b/templates/payment/home.html
@@ -126,9 +126,26 @@
 
 
 <script>
+  function getCookie(name) {
+    var cookieValue = null;
+    if (document.cookie && document.cookie !== '') {
+      var cookies = document.cookie.split(';');
+      for (var i = 0; i < cookies.length; i++) {
+        var cookie = cookies[i].trim();
+        if (cookie.substring(0, name.length + 1) === (name + '=')) {
+          cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
+          break;
+        }
+      }
+    }
+    return cookieValue;
+  }
+    var csrftoken = getCookie('csrftoken');
+
     var STRIPE_PUBLISHABLE_KEY = '{{STRIPE_PUBLISHABLE_KEY}}'
     var CSRF_TOKEN = '{{ csrf_token }}';
     var CSRF_TRUSTED_ORIGINS = ['https://engisole-commercestore.herokuapp.com', '*']
+    
     $(document).ready(function() {
 
       setTimeout(function() {
